--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
     <h1>EduSer</h1>
     
-<img src="https://raw.githubusercontent.com/Jonnatan1308/EduSer/main/Logo.jpg" width="60" height="60" alt="Logo EduSer" />
+<img src="https://github.com/Jonnatan1308/EduSer/edit/main/Logo.jpg" />
     
     <h2>Quiénes somos</h2>
     <p>Somos una institución educativa que cree en la educación como un camino para el crecimiento integral de cada estudiante. Nuestra misión va más allá de la enseñanza de contenidos académicos; buscamos formar personas seguras de sí mismas, capaces de gestionar sus emociones, relacionarse de manera sana con los demás y afrontar los desafíos de la vida con resiliencia y determinación.</p>
