--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
             margin: 20px;
             padding: 20px;
         }
+        <style>
+        body {
+            background-color: #2ef9ed; /* Color de fondo */
+            margin: 0; /* Eliminar márgenes por defecto */
+            font-family: Arial, sans-serif; /* Fuente para el texto */
+            color: #333; /* Color del texto */
+        }
+        h1 {
+            text-align: center; /* Centrar el título */
+            padding: 20px; /* Espaciado alrededor del título */
+        }
+    </style>
         img {
             width: 100%;
             height: auto;
