--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
     <h1>EduSer</h1>
     <h1>Bienvenido a la Página Principal</h1>
-    <p>Haz clic en la palabra <a href="autoconcepto.html">Autoconcepto</a> para saber más sobre el tema.</p>
+    <p>Haz clic en la palabra <a href="Autoconcepto.html">Autoconcepto</a> para saber más sobre el tema.</p>
     <img src="https://raw.githubusercontent.com/Jonnatan1308/EduSer/7cd4058091b2e52e09cf58f8b4cfc1366bb07a9d/Logo.jpg" alt="Logo EduSer" width="60">
     
     <h2>Quiénes somos</h2>
