--- a/autoconcepto.html
+++ b/autoconcepto.html
@@ -3,11 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Autoconcepto</title>
+    <title>EduSer</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #1f618d;
+            text-align: center;
+        }
+        .header {
+            background-color: #3b78c2;
+            color: white;
+            padding: 20px;
+            font-size: 32px;
+            font-weight: bold;
+        }
+        .container {
+            background-color: white;
+            width: 80%;
+            margin: 20px auto;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .title {
+            font-size: 28px;
+            font-weight: bold;
+            color: #1f618d;
+        }
+        .logo {
+            margin: 10px 0;
+        }
+        .text {
+            text-align: justify;
+            font-size: 16px;
+            color: #333;
+        }
+    </style>
 </head>
-<body>
-    <h1>¿Qué es el Autoconcepto?</h1>
-    <p>El autoconcepto es la percepción que una persona tiene de sí misma. Incluye pensamientos, sentimientos y creencias sobre quiénes somos y cómo nos vemos a nosotros mismos.</p>
-    <p><a href="index.html">Volver a la página principal</a></p>
+<body>                                                                                                          
+    <div class="header">Autoconcepto</div>
+  <br>
+   <img src="https://github.com/Jonnatan1308/EduSer/blob/main/Autoconcepto.jpg?raw=true" alt="Imagen de Autoconcepto" width="400">
+  
+    <div class="container">
+               <h3 class="title">¿Qué es el autoconcepto?</h3>
+    <section>
+        <p style="text-align: justify">El autoconcepto se refiere a la percepción que una persona tiene de sí misma. Es un constructo psicológico que abarca creencias, pensamientos y sentimientos sobre uno mismo, incluyendo aspectos como la autoestima, la identidad y la autoimagen. El autoconcepto se forma a lo largo de la vida y está influenciado por experiencias personales, interacciones sociales y el contexto cultural.</p>
+    </section>
+
+    <section>
+      <br>
+        <h2 style="color: #1f618d; text-align: justify">Componentes del Autoconcepto</h2>
+        <ul>
+            <li style="text-align: justify"><strong >Autoimagen:</strong> Es la representación mental que una persona tiene de su apariencia física y sus características personales.</li>
+            <li style="text-align: justify"><strong>Autoestima:</strong> Se refiere al valor que una persona se asigna a sí misma, que puede ser positivo o negativo.</li>
+            <li style="text-align: justify"><strong>Identidad:</strong> Incluye los roles sociales que una persona asume (por ejemplo, ser padre, profesional, amigo) y cómo estos roles influyen en su percepción de sí mismo.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2 style="color: #1f618d; text-align: justify">Importancia del Autoconcepto</h2>
+        <p style="text-align: justify">El autoconcepto es fundamental por varias razones:</p>
+        <ul>
+            <li style="text-align: justify"><strong>Influencia en el Comportamiento:</strong> La forma en que nos vemos a nosotros mismos afecta nuestras decisiones y acciones. Un autoconcepto positivo puede llevar a comportamientos más proactivos y saludables.</li>
+            <li style="text-align: justify"><strong>Relaciones Interpersonales:</strong> La manera en que nos percibimos influye en cómo interactuamos con los demás. Una buena autoestima puede fomentar relaciones más saludables y satisfactorias.</li>
+            <li style="text-align: justify"><strong>Salud Mental:</strong> Un autoconcepto negativo está asociado con problemas de salud mental como la depresión y la ansiedad. Por el contrario, un autoconcepto saludable puede contribuir a un mayor bienestar emocional.</li>
+            <li style="text-align: justify"><strong>Desarrollo Personal:</strong> Comprender nuestro autoconcepto nos permite identificar áreas de mejora y crecimiento personal, facilitando un desarrollo más consciente y dirigido.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2 style="color: #1f618d; text-align: justify">Cómo Hacer Uso del Autoconcepto</h2>
+        <ol>
+            <li style="text-align: justify"><strong>Reflexión Personal:</strong> Dedicar tiempo a reflexionar sobre cómo te ves a ti mismo es crucial. Puedes hacerlo mediante:
+                <ul>
+                    <li style="text-align: justify"><strong>Diarios:</strong> Escribir sobre tus pensamientos y sentimientos puede ayudarte a clarificar tu autoconcepto.</li>
+                    <li style="text-align: justify"><strong>Meditación:</strong> La meditación puede facilitar una mayor conciencia de ti mismo y fomentar una autoimagen positiva.</li>
+                </ul>
+            </li>
+            <li style="text-align: justify"><strong>Establecimiento de Metas:</strong> Define metas realistas que te ayuden a mejorar tu autoconcepto. Estas pueden incluir:
+                <ul>
+                    <li style="text-align: justify"><strong>Desarrollo de habilidades:</strong> Aprender algo nuevo puede aumentar tu autoestima.</li>
+                    <li style="text-align: justify"><strong>Mejorar relaciones:</strong> Trabajar en tus habilidades interpersonales puede enriquecer tus conexiones sociales.</li>
+                </ul>
+            </li>
+            <li style="text-align: justify"><strong>Feedback Constructivo:</strong> Busca retroalimentación de personas cercanas a ti. A menudo, los demás pueden ofrecerte perspectivas valiosas sobre tus fortalezas y áreas de mejora que quizás no reconozcas.</li>
+            <li style="text-align: justify"><strong>Práctica de la Autoafirmación:</strong> Utiliza afirmaciones positivas para reforzar tu autoconcepto. Repetir frases como "Soy capaz" o "Merezco ser feliz" puede ayudarte a cambiar patrones negativos de pensamiento.</li>
+        </ol>
+    </section>
+
+    <section>
+        <h2 style="color: #1f618d;" >Conclusión</h2>
+        <p style="text-align: justify">El autoconcepto es un aspecto esencial de nuestra psicología que influye en todos los ámbitos de nuestra vida. Comprenderlo y trabajarlo puede conducir a mejoras significativas en nuestra salud mental, relaciones interpersonales y desarrollo personal. Al adoptar estrategias prácticas para cultivar un autoconcepto positivo, podemos empoderarnos para alcanzar nuestras metas y vivir una vida más plena y satisfactoria.</p>
+        <p style="text-align: justify">Fomentar un autoconcepto saludable no solo beneficia al individuo, sino que también impacta positivamente en las comunidades en las que vivimos, creando un entorno más solidario y comprensivo para todos.</p>
+    </section>
+      <br>
+      <p><a href="index.html">Volver a la página principal</a></p>
 </body>
 </html>
