--- a/postergaciondelagratificacion.html
+++ b/postergaciondelagratificacion.html
@@ -43,9 +43,9 @@
     </style>
 </head>
 <body>                                                                                                          
-    <div class="header">¿Postergación de la Gratificación</div>
+    <div class="header">¿Postergación de la Gratificación</div> 
   <br>
-   <img src="https://github.com/Jonnatan1308/EduSer/blob/main/Postergaciondelagratificacion.jpg?raw=true" alt="Imagen de Postergación de la gratificación" width="700">
+   <img src="https://github.com/Jonnatan1308/EduSer/blob/main/Postergaciondelagratificación.jpg?raw=true" alt="Imagen de Postergación de la gratificación" width="700">
   
     <div class="container">
                <h3 class="title">¿Qué es la Postergación de la Gratificación?</h3>
