--- a/postergaciondelagratificacion.html
+++ b/postergaciondelagratificacion.html
@@ -43,7 +43,7 @@
     </style>
 </head>
 <body>                                                                                                          
-    <div class="header">¿Postergación de la Gratificación</div> 
+    <div class="header">Postergación de la Gratificación</div> 
   <br>
    <img src="https://github.com/Jonnatan1308/EduSer/blob/main/Postergaciondelagratificación.jpg?raw=true" alt="Imagen de Postergación de la gratificación" width="700">
   
