--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ Además, nos aseguramos de que cada estudiante reciba el apoyo necesario para fo
         </p></li>
     <li>⏳ <strong>Postergación de la gratificación</strong> – La capacidad de posponer la búsqueda de placer inmediato para concentrarnos en el logro de metas a largo plazo.<p><a href="postergaciondelagratificacion.html">🔗 Haz clic aquí para profundizar en esta competencia socioemocional</a>
         </p></li>
-    <li>😔 <strong>Tolerancia a la frustración</strong> – La capacidad de aceptar y gestionar situaciones difíciles sin rendirse.<p><a href="toleranciaalafrustración.html">🔗 Haz clic aquí para profundizar en esta competencia socioemocional</a>
+    <li>😔 <strong>Tolerancia a la frustración</strong> – La capacidad de aceptar y gestionar situaciones difíciles sin rendirse.<p><a href="toleranciaalafrustracion.html">🔗 Haz clic aquí para profundizar en esta competencia socioemocional</a>
         </p></li>
     <li>💡 <strong>Toma de perspectiva</strong> – La habilidad para comprender situaciones desde diversos puntos de vista, promoviendo la empatía.<p><a href="tomadeperspectiva.html">🔗 Haz clic aquí para profundizar en esta competencia socioemocional</a>
         </p></li>
