--- a/toleranciaalafrustracion.html
+++ b/toleranciaalafrustracion.html
@@ -45,7 +45,7 @@
 <body>                                                                                                          
     <div class="header">Tolerancia a la Frustración</div>
   <br>
-   <img src="https://github.com/Jonnatan1308/EduSer/blob/main/Toleranciaalafrustracion.jpg?raw=true" alt="Imagen de Tolerancia a la Frustración" width="700">
+   <img src="https://github.com/Jonnatan1308/EduSer/blob/main/Toleranciaalafrustración.png?raw=true" alt="Imagen de Tolerancia a la Frustración" width="700">
   
     <div class="container">
                <h3 class="title">¿Qué es la Tolerancia a la Frustración?</h3>
