--- a/tomadeperspectiva.html
+++ b/tomadeperspectiva.html
@@ -98,7 +98,7 @@
             <li class="list-item" style="text-align: justify">Autoevaluación: Pregúntate qué creencias o experiencias pueden estar influyendo en tu percepción del otro. Esto te permitirá abordar las interacciones con una mente más abierta.</li>
         </ul>
 
-        <h2>Conclusión</h2>
+        <h2 style="color: #1f618d">Conclusión</h2>
         <p style="text-align: justify">La toma de perspectiva es una habilidad esencial que impacta todos los aspectos de nuestras vidas, desde nuestras relaciones personales hasta nuestra capacidad para resolver conflictos y tomar decisiones éticas. Al desarrollar esta habilidad, no solo mejoramos nuestras interacciones diarias, sino que también fomentamos un entorno más comprensivo y empático en nuestras comunidades.</p>
         <p style="text-align: justify">Practicar la toma de perspectiva requiere esfuerzo consciente y dedicación; sin embargo, los beneficios son profundos e incluyen relaciones más sólidas, una mayor empatía hacia los demás y un crecimiento personal significativo. A medida que cultivamos esta habilidad, nos convertimos en individuos más comprensivos y tolerantes, capaces de navegar por las complejidades emocionales con sensibilidad y respeto hacia las experiencias ajenas.</p>
         <br>
