--- a/tomadeperspectiva.html
+++ b/tomadeperspectiva.html
@@ -71,7 +71,7 @@
         </ul>
 
         <h2 style="color: #1f618d; text-align: justify">Cómo Hacer Uso de la Toma de Perspectiva</h2>
-        <p><strong>1. Escucha Activa:</strong> La escucha activa es fundamental para practicar la toma de perspectiva:</p>
+        <p style="text-align: justify"><strong>1. Escucha Activa:</strong> La escucha activa es fundamental para practicar la toma de perspectiva:</p>
         <ul>
             <li class="list-item" style="text-align: justify">Presta Atención Plena: Concéntrate completamente en lo que la otra persona está diciendo sin interrumpir ni formular respuestas mientras habla.</li>
             <li class="list-item" style="text-align: justify">Refleja lo Escuchado: Parafrasea o resume lo que has escuchado para asegurarte de que has entendido correctamente el punto de vista del otro.</li>
