--- a/comportamientoprosocial.html
+++ b/comportamientoprosocial.html
@@ -45,7 +45,7 @@
 <body>                                                                                                          
     <div class="header">Comportamiento Prosocial </div>
   <br>
-   <img src="https://github.com/Jonnatan1308/EduSer/blob/main/Comportamientoprosocial.jpg?raw=true" alt="Imagen de COmportamiento Prosocial" width="700">
+   <img src="https://github.com/Jonnatan1308/EduSer/blob/main/Comportamientoprosocial.jpg?raw=true" alt="Imagen de Comportamiento Prosocial" width="700">
   
     <div class="container">
                <h3 class="title">¿Qué es el Comportamiento Prosocial?</h3>
