--- a/escuchaactiva.html
+++ b/escuchaactiva.html
@@ -89,7 +89,7 @@
             <li class="list-item" style="text-align: justify"><strong>Reflejo Emocional:</strong> "Parece que esto te ha afectado mucho."</li>
         </ul>
 
-        <p><strong>4. Haz Preguntas Clarificadoras:</strong> Invita al hablante a profundizar en su mensaje:</p>
+        <p style="text-align: justify"><strong>4. Haz Preguntas Clarificadoras:</strong> Invita al hablante a profundizar en su mensaje:</p>
         <ul>
             <li class="list-item" style="text-align: justify"><strong>Preguntas Abiertas:</strong> "¿Puedes contarme más sobre eso?" o "¿Cómo te hizo sentir esta situación?"</li>
             <li class="list-item" style="text-align: justify"><strong>Aclaraciones Específicas:</strong> "Cuando dijiste X, ¿te referías a Y?"</li>
