--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ Además, nos aseguramos de que cada estudiante reciba el apoyo necesario para fo
         </p></li>
     <li>🔄 <strong>Manejo de conflictos</strong> – La habilidad para resolver desacuerdos mediante soluciones equitativas.<p><a href="manejodeconflictos.html">🔗 Haz clic aquí para profundizar en esta competencia socioemocional</a>
         </p></li>
-    <li>🏆 <strong>Motivación al logro</strong> – La fuerza que nos impulsa a alcanzar nuestras metas y objetivos.<p><a href="motivaciónallogro.html">🔗 Haz clic aquí para profundizar en esta competencia socioemocional</a>
+    <li>🏆 <strong>Motivación al logro</strong> – La fuerza que nos impulsa a alcanzar nuestras metas y objetivos.<p><a href="motivacionallogro.html">🔗 Haz clic aquí para profundizar en esta competencia socioemocional</a>
         </p></li>
     <li>💪 <strong>Perseverancia</strong> – La capacidad de mantener el esfuerzo y la determinación incluso ante obstáculos.<p><a href="perseverancia.html">🔗 Haz clic aquí para profundizar en esta competencia socioemocional</a>
         </p></li>
