--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
             justify-content: center;
             flex-wrap: wrap;
             margin: 10px;
+          table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
         }
         .card1 {
             background: white;
