--- a/index.html
+++ b/index.html
@@ -196,7 +196,11 @@ Además, nos aseguramos de que cada estudiante reciba el apoyo necesario para fo
             <tr><td>🔍 Análisis de consecuencias</td><td>La capacidad de identificar y evaluar los efectos de diversas decisiones.</td><td><a href="analisisdeconsecuencias.html">Haz clic aquí</a></td></tr>
         </table>
     </div>
-    
+           
+    <div class="container">
+    ⏳ ¡Gracias por confiar en nosotros! 😊 Agradecimientos y recursos utilizados.⏳ 
+                <br> <a href="Agradecimientos.html"> Clic aquí</a>
+                  </div>
       <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
 <script src="https://files.bpcontent.cloud/2025/02/01/02/20250201020545-RUJAD2OZ.js"></script>
 </body>
