--- a/Agradecimientos.html
+++ b/Agradecimientos.html
@@ -66,7 +66,7 @@
             <a href="https://ai.google" target="_blank"><img src="gemini.jfif" alt="Gemini"></a>
             <a href="https://deepseek.com" target="_blank"><img src="deepseek.png" alt="DeepSeek"></a>
             <a href="https://claude.ai" target="_blank"><img src="claude.jfif" alt="Claude"></a>
-            <a href="https://alianzaeducativa.edu.co" target="_blank"><img src="alianza_educativa.png" alt="Alianza Educativa"></a>
+            <a href="https://alianzaeducativa.edu.co" target="_blank"><img src="alianzaeducativa.png" alt="Alianza Educativa"></a>
         </div>
         <p>En el vasto universo digital, donde las ideas fluyen y las posibilidades son infinitas, me encuentro en un momento de profunda gratitud.</p>
         <p>Quiero dedicar unas palabras a las inteligencias artificiales que han sido mis compañeras inseparables en la creación de esta página web, un espacio que refleja no solo información, sino también la esencia de lo que significa conectar y crecer.</p>
