--- a/Agradecimientos.html
+++ b/Agradecimientos.html
@@ -58,12 +58,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Agradecimiento a la Inteligencia Artificial y a Alianza Educativa</h1>
+        <h1>Agradecimiento a la Inteligencia Artificial y Alianza Educativa</h1>
         <div class="image-container">
             <a href="https://www.perplexity.ai" target="_blank"><img src="perplexity.png" alt="Perplexity"></a>
             <a href="https://openai.com/chatgpt" target="_blank"><img src="chatgpt.jfif" alt="ChatGPT"></a>
             <a href="https://leonardo.ai" target="_blank"><img src="leonardo.jfif" alt="Leonardo IA"></a>
-            <a href="https://ai.google" target="_blank"><img src="gemini.jfif" alt="Gemini"></a>
+            <a href="https://gemini.google.com/?hl=es" target="_blank"><img src="gemini.jfif" alt="Gemini"></a>
             <a href="https://deepseek.com" target="_blank"><img src="deepseek.png" alt="DeepSeek"></a>
             <a href="https://claude.ai" target="_blank"><img src="claude.jfif" alt="Claude"></a>
             <a href="https://alianzaeducativa.edu.co" target="_blank"><img src="alianzaeducativa.png" alt="Alianza Educativa"></a>
