--- a/Agradecimientos.html
+++ b/Agradecimientos.html
@@ -95,5 +95,7 @@
     <footer>
         &copy; 2025 - Creado con gratitud y admiración.
     </footer>
+ <br>
+      <p><a href="index.html">Volver a la página principal</a></p>
 </body>
 </html>
