--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@ Además, nos aseguramos de que cada estudiante reciba el apoyo necesario para fo
            <img src="https://github.com/Jonnatan1308/EduSer/blob/main/EduSer.png?raw=true" alt="Imagen EduSer"  width="800">
     <div class="container">
         <h2>Competencias Socioemocionales</h2>
+
+        <a href="https://drive.google.com/file/d/1nwQr-QDokgkvvTl9bP1bWOPyjr67-tC8/view" target="_blank"><img src="alianzaeducativa.png" alt="Alianza Educativa"></a>
+        
         <table>
             <tr>
                 <th>Habilidad</th>
