--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ Adquieran la capacidad de perseverar frente a los desafíos, enfrentando la frus
 Además, nos aseguramos de que cada estudiante reciba el apoyo necesario para fortalecer su bienestar emocional, impulsando un aprendizaje significativo que los prepare para la vida.</p>
         </div>
     </div>
-           <img src="https://github.com/Jonnatan1308/EduSer/blob/main/EduSer.png?raw=true" alt="Imagen EduSer"  width="800">
+           <img src="https://github.com/Jonnatan1308/EduSer/blob/main/EduSer.png?raw=true" alt="Imagen EduSer"  width="800"><br>
             <br>
            <br>
             <a href="https://drive.google.com/file/d/1nwQr-QDokgkvvTl9bP1bWOPyjr67-tC8/view" target="_blank"><img src="alianzaeducativa.png" alt="Alianza Educativa"></a>
