--- a/index.html
+++ b/index.html
@@ -171,7 +171,10 @@ Además, nos aseguramos de que cada estudiante reciba el apoyo necesario para fo
             <br>
            <br>
            <div class="container">
-               <p style="text-align: justify">Marco de Competencias Socioemocionales
+               <h3 class="title">Marco de Competencias Socioemocionales</h3>
+                <br>
+                <br>
+             
             <a href="https://drive.google.com/file/d/1nwQr-QDokgkvvTl9bP1bWOPyjr67-tC8/view" target="_blank"><img src="alianzaeducativa.png" alt="Alianza Educativa"></a>
            </div>
                <br>
