--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@ Además, nos aseguramos de que cada estudiante reciba el apoyo necesario para fo
             <br>
            <br>
            <div class="container">
-               <h3 class="title">Marco de Competencias Socioemocionales</h3>
+               <h3 style="color: #1f618d; font-size: 22px;text-align:Center;">Marco de Competencias Socioemocionales</h3>
                 <br>
                 <br>
              
-            <a href="https://drive.google.com/file/d/1nwQr-QDokgkvvTl9bP1bWOPyjr67-tC8/view" target="_blank"><img src="alianzaeducativa.png" alt="Alianza Educativa"></a>
+            <a style= font-size: text-align:Center; href="https://drive.google.com/file/d/1nwQr-QDokgkvvTl9bP1bWOPyjr67-tC8/view" target="_blank"><img src="alianzaeducativa.png" alt="Alianza Educativa"></a>
            </div>
                <br>
            <br>
