--- a/index.html
+++ b/index.html
@@ -174,9 +174,10 @@ Además, nos aseguramos de que cada estudiante reciba el apoyo necesario para fo
                <h3 style="color: #1f618d; font-size: 22px;text-align:Center;">Marco de Competencias Socioemocionales</h3>
                 <br>
                 <br>
-             
+               <div class="container">
             <a style= font-size: text-align:Center; href="https://drive.google.com/file/d/1nwQr-QDokgkvvTl9bP1bWOPyjr67-tC8/view" target="_blank"><img src="alianzaeducativa.png" alt="Alianza Educativa"></a>
            </div>
+                 </div>
                <br>
            <br>
     <div class="container">
