--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ Además, nos aseguramos de que cada estudiante reciba el apoyo necesario para fo
             <tr><td>🌊 Escucha activa</td><td>La habilidad de prestar atención plena a los demás, mostrando interés genuino.</td><td><a href="escuchaactiva.html">Haz clic aquí</a></td></tr>
             <tr><td>💥 Asertividad</td><td>La capacidad de expresar pensamientos y emociones de manera clara y respetuosa.</td><td><a href="asertividad.html">Haz clic aquí</a></td></tr>
             <tr><td>🔄 Manejo de conflictos</td><td>La habilidad para resolver desacuerdos mediante soluciones equitativas.</td><td><a href="manejodeconflictos.html">Haz clic aquí</a></td></tr>
-            <tr><td>🏆 Motivación al logro</td><td>La fuerza que nos impulsa a alcanzar nuestras metas y objetivos.</td><td><a href="motivaciónallogro.html">Haz clic aquí</a></td></tr>
+            <tr><td>🏆 Motivación al logro</td><td>La fuerza que nos impulsa a alcanzar nuestras metas y objetivos.</td><td><a href="motivacionallogro.html">Haz clic aquí</a></td></tr>
             <tr><td>💪 Perseverancia</td><td>La capacidad de mantener el esfuerzo y la determinación incluso ante obstáculos.</td><td><a href="perseverancia.html">Haz clic aquí</a></td></tr>
             <tr><td>🤖 Manejo del estrés</td><td>La implementación de estrategias efectivas para reducir la presión diaria y promover bienestar.</td><td><a href="manejodelestres.html">Haz clic aquí</a></td></tr>
             <tr><td>🔄 Generación de opciones</td><td>La capacidad de considerar diversas soluciones para tomar decisiones informadas.</td><td><a href="generaciondeopciones.html">Haz clic aquí</a></td></tr>
